[tool.poetry]
name = "vetter"
version = "0.1.0"
description = "A candidate vetting chat bot using GPT."
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
streamlit-chat = "^0.0.2.2"
Flask = "^2.3.2"
altair = "4.0"
watchdog = "^3.0.0"
tenacity = "^8.2.2"


[tool.poetry.group.dev.dependencies]
pretty-errors = "^1.2.25"
ipython = "^8.14.0"
pylint = "^2.17.4"
pylama = "^8.4.1"
pdbpp = "^0.10.3"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
